Rework how wingtip is calculated, works in first person now